GrammarParser.java
// $ANTLR 3.5.2 Grammar.g 2021-03-31 19:18:35

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class GrammarParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENTS", "ID", "INT", "STRING", 
		"WS", "'('", "')'", "'+'", "','", "':'", "'='", "'['", "']'", "'print'"
	};
	public static final int EOF=-1;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int COMMENTS=4;
	public static final int ID=5;
	public static final int INT=6;
	public static final int STRING=7;
	public static final int WS=8;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public GrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public GrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return GrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Grammar.g"; }

	 
	  ActionRoutines actions = new ActionRoutines();



	// $ANTLR start "prog"
	// Grammar.g:7:1: prog : ( stmt )+ ;
	public final void prog() throws RecognitionException {
		try {
			// Grammar.g:7:6: ( ( stmt )+ )
			// Grammar.g:7:8: ( stmt )+
			{
			// Grammar.g:7:8: ( stmt )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID||LA1_0==9||LA1_0==17) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// Grammar.g:7:9: stmt
					{
					pushFollow(FOLLOW_stmt_in_prog17);
					stmt();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prog"



	// $ANTLR start "stmt"
	// Grammar.g:10:1: stmt : ( assignment | unpack | print );
	public final void stmt() throws RecognitionException {
		try {
			// Grammar.g:10:7: ( assignment | unpack | print )
			int alt2=3;
			switch ( input.LA(1) ) {
			case ID:
				{
				alt2=1;
				}
				break;
			case 9:
				{
				alt2=2;
				}
				break;
			case 17:
				{
				alt2=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// Grammar.g:10:9: assignment
					{
					pushFollow(FOLLOW_assignment_in_stmt37);
					assignment();
					state._fsp--;

					}
					break;
				case 2 :
					// Grammar.g:11:11: unpack
					{
					pushFollow(FOLLOW_unpack_in_stmt50);
					unpack();
					state._fsp--;

					}
					break;
				case 3 :
					// Grammar.g:12:11: print
					{
					pushFollow(FOLLOW_print_in_stmt63);
					print();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "stmt"



	// $ANTLR start "assignment"
	// Grammar.g:15:1: assignment : ( ID '=' assignment_tail[$ID.text] | ID '[' INT ']' '=' value | ID '=' STRING | ID '=' INT );
	public final void assignment() throws RecognitionException {
		Token ID1=null;
		Token ID2=null;
		Token INT3=null;
		Token ID5=null;
		Token STRING6=null;
		Token ID7=null;
		Token INT8=null;
		Object value4 =null;

		try {
			// Grammar.g:15:13: ( ID '=' assignment_tail[$ID.text] | ID '[' INT ']' '=' value | ID '=' STRING | ID '=' INT )
			int alt3=4;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==ID) ) {
				int LA3_1 = input.LA(2);
				if ( (LA3_1==14) ) {
					switch ( input.LA(3) ) {
					case STRING:
						{
						alt3=3;
						}
						break;
					case INT:
						{
						alt3=4;
						}
						break;
					case ID:
					case 9:
						{
						alt3=1;
						}
						break;
					default:
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 3, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}
				}
				else if ( (LA3_1==15) ) {
					alt3=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// Grammar.g:15:15: ID '=' assignment_tail[$ID.text]
					{
					ID1=(Token)match(input,ID,FOLLOW_ID_in_assignment81); 
					match(input,14,FOLLOW_14_in_assignment83); 
					 actions.create_tuple((ID1!=null?ID1.getText():null)); 
					pushFollow(FOLLOW_assignment_tail_in_assignment87);
					assignment_tail((ID1!=null?ID1.getText():null));
					state._fsp--;

					}
					break;
				case 2 :
					// Grammar.g:16:19: ID '[' INT ']' '=' value
					{
					ID2=(Token)match(input,ID,FOLLOW_ID_in_assignment108); 
					match(input,15,FOLLOW_15_in_assignment110); 
					INT3=(Token)match(input,INT,FOLLOW_INT_in_assignment112); 
					match(input,16,FOLLOW_16_in_assignment114); 
					match(input,14,FOLLOW_14_in_assignment116); 
					pushFollow(FOLLOW_value_in_assignment118);
					value4=value();
					state._fsp--;

					 actions.update_value((ID2!=null?ID2.getText():null), Integer.parseInt((INT3!=null?INT3.getText():null)), value4); 
					}
					break;
				case 3 :
					// Grammar.g:17:19: ID '=' STRING
					{
					ID5=(Token)match(input,ID,FOLLOW_ID_in_assignment140); 
					match(input,14,FOLLOW_14_in_assignment142); 
					STRING6=(Token)match(input,STRING,FOLLOW_STRING_in_assignment144); 
					 actions.create_string((ID5!=null?ID5.getText():null), (STRING6!=null?STRING6.getText():null)); 
					}
					break;
				case 4 :
					// Grammar.g:18:19: ID '=' INT
					{
					ID7=(Token)match(input,ID,FOLLOW_ID_in_assignment166); 
					match(input,14,FOLLOW_14_in_assignment168); 
					INT8=(Token)match(input,INT,FOLLOW_INT_in_assignment170); 
					 actions.create_int((ID7!=null?ID7.getText():null), Integer.parseInt((INT8!=null?INT8.getText():null))); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "assignment"



	// $ANTLR start "assignment_tail"
	// Grammar.g:21:1: assignment_tail[String tuple_id] : ( '(' value_tuple[$tuple_id] ')' |id1= ID ( '+' id2= ID )* | ID '[' (begin= INT )? ':' (end= INT )? ']' );
	public final void assignment_tail(String tuple_id) throws RecognitionException {
		Token id1=null;
		Token id2=null;
		Token begin=null;
		Token end=null;
		Token ID9=null;

		try {
			// Grammar.g:21:35: ( '(' value_tuple[$tuple_id] ')' |id1= ID ( '+' id2= ID )* | ID '[' (begin= INT )? ':' (end= INT )? ']' )
			int alt7=3;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==9) ) {
				alt7=1;
			}
			else if ( (LA7_0==ID) ) {
				int LA7_2 = input.LA(2);
				if ( (LA7_2==15) ) {
					alt7=3;
				}
				else if ( (LA7_2==EOF||LA7_2==ID||LA7_2==9||LA7_2==11||LA7_2==17) ) {
					alt7=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 7, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// Grammar.g:22:17: '(' value_tuple[$tuple_id] ')'
					{
					match(input,9,FOLLOW_9_in_assignment_tail219); 
					pushFollow(FOLLOW_value_tuple_in_assignment_tail221);
					value_tuple(tuple_id);
					state._fsp--;

					match(input,10,FOLLOW_10_in_assignment_tail225); 
					}
					break;
				case 2 :
					// Grammar.g:23:19: id1= ID ( '+' id2= ID )*
					{
					id1=(Token)match(input,ID,FOLLOW_ID_in_assignment_tail250); 
					 actions.concatenate_tuple(tuple_id, (id1!=null?id1.getText():null)); 
					// Grammar.g:23:81: ( '+' id2= ID )*
					loop4:
					while (true) {
						int alt4=2;
						int LA4_0 = input.LA(1);
						if ( (LA4_0==11) ) {
							alt4=1;
						}

						switch (alt4) {
						case 1 :
							// Grammar.g:23:83: '+' id2= ID
							{
							match(input,11,FOLLOW_11_in_assignment_tail256); 
							id2=(Token)match(input,ID,FOLLOW_ID_in_assignment_tail262); 
							actions.concatenate_tuple(tuple_id, (id2!=null?id2.getText():null)); 
							}
							break;

						default :
							break loop4;
						}
					}

					}
					break;
				case 3 :
					// Grammar.g:24:19: ID '[' (begin= INT )? ':' (end= INT )? ']'
					{
					ID9=(Token)match(input,ID,FOLLOW_ID_in_assignment_tail287); 
					match(input,15,FOLLOW_15_in_assignment_tail289); 
					// Grammar.g:24:26: (begin= INT )?
					int alt5=2;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==INT) ) {
						alt5=1;
					}
					switch (alt5) {
						case 1 :
							// Grammar.g:24:27: begin= INT
							{
							begin=(Token)match(input,INT,FOLLOW_INT_in_assignment_tail296); 
							}
							break;

					}

					match(input,13,FOLLOW_13_in_assignment_tail300); 
					// Grammar.g:24:45: (end= INT )?
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==INT) ) {
						alt6=1;
					}
					switch (alt6) {
						case 1 :
							// Grammar.g:24:46: end= INT
							{
							end=(Token)match(input,INT,FOLLOW_INT_in_assignment_tail307); 
							}
							break;

					}

					match(input,16,FOLLOW_16_in_assignment_tail311); 
					 actions.slice_tuple(tuple_id, (ID9!=null?ID9.getText():null), (begin!=null?begin.getText():null), (end!=null?end.getText():null)); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "assignment_tail"



	// $ANTLR start "value_tuple"
	// Grammar.g:27:1: value_tuple[String tuple_id] : (t1= value ( ',' t2= value )* |);
	public final void value_tuple(String tuple_id) throws RecognitionException {
		Object t1 =null;
		Object t2 =null;

		try {
			// Grammar.g:27:30: (t1= value ( ',' t2= value )* |)
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( ((LA9_0 >= ID && LA9_0 <= STRING)) ) {
				alt9=1;
			}
			else if ( (LA9_0==10) ) {
				alt9=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}

			switch (alt9) {
				case 1 :
					// Grammar.g:28:14: t1= value ( ',' t2= value )*
					{
					pushFollow(FOLLOW_value_in_value_tuple357);
					t1=value();
					state._fsp--;

					 actions.add_value(tuple_id, t1); 
					// Grammar.g:28:68: ( ',' t2= value )*
					loop8:
					while (true) {
						int alt8=2;
						int LA8_0 = input.LA(1);
						if ( (LA8_0==12) ) {
							alt8=1;
						}

						switch (alt8) {
						case 1 :
							// Grammar.g:28:69: ',' t2= value
							{
							match(input,12,FOLLOW_12_in_value_tuple362); 
							pushFollow(FOLLOW_value_in_value_tuple368);
							t2=value();
							state._fsp--;

							 actions.add_value(tuple_id, t2); 
							}
							break;

						default :
							break loop8;
						}
					}

					}
					break;
				case 2 :
					// Grammar.g:30:14: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "value_tuple"



	// $ANTLR start "value"
	// Grammar.g:32:1: value returns [Object val] : ( STRING | INT | ID );
	public final Object value() throws RecognitionException {
		Object val = null;


		Token STRING10=null;
		Token INT11=null;
		Token ID12=null;

		try {
			// Grammar.g:32:26: ( STRING | INT | ID )
			int alt10=3;
			switch ( input.LA(1) ) {
			case STRING:
				{
				alt10=1;
				}
				break;
			case INT:
				{
				alt10=2;
				}
				break;
			case ID:
				{
				alt10=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				throw nvae;
			}
			switch (alt10) {
				case 1 :
					// Grammar.g:33:13: STRING
					{
					STRING10=(Token)match(input,STRING,FOLLOW_STRING_in_value425); 
					 val = new String((STRING10!=null?STRING10.getText():null)); 
					}
					break;
				case 2 :
					// Grammar.g:34:13: INT
					{
					INT11=(Token)match(input,INT,FOLLOW_INT_in_value441); 
					 val = Integer.parseInt((INT11!=null?INT11.getText():null)); 
					}
					break;
				case 3 :
					// Grammar.g:35:13: ID
					{
					ID12=(Token)match(input,ID,FOLLOW_ID_in_value460); 
					 val = new String((ID12!=null?ID12.getText():null)); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return val;
	}
	// $ANTLR end "value"



	// $ANTLR start "unpack"
	// Grammar.g:38:1: unpack : '(' t3= ID ( ',' t4= ID )* ')' '=' t5= ID ;
	public final void unpack() throws RecognitionException {
		Token t3=null;
		Token t4=null;
		Token t5=null;

		try {
			// Grammar.g:38:8: ( '(' t3= ID ( ',' t4= ID )* ')' '=' t5= ID )
			// Grammar.g:38:10: '(' t3= ID ( ',' t4= ID )* ')' '=' t5= ID
			{
			match(input,9,FOLLOW_9_in_unpack485); 
			t3=(Token)match(input,ID,FOLLOW_ID_in_unpack491); 
			 actions.add_to_pack((t3!=null?t3.getText():null)); 
			// Grammar.g:38:57: ( ',' t4= ID )*
			loop11:
			while (true) {
				int alt11=2;
				int LA11_0 = input.LA(1);
				if ( (LA11_0==12) ) {
					alt11=1;
				}

				switch (alt11) {
				case 1 :
					// Grammar.g:38:58: ',' t4= ID
					{
					match(input,12,FOLLOW_12_in_unpack496); 
					t4=(Token)match(input,ID,FOLLOW_ID_in_unpack502); 
					 actions.add_to_pack((t4!=null?t4.getText():null)); 
					}
					break;

				default :
					break loop11;
				}
			}

			match(input,10,FOLLOW_10_in_unpack509); 
			match(input,14,FOLLOW_14_in_unpack511); 
			t5=(Token)match(input,ID,FOLLOW_ID_in_unpack517); 
			 actions.unpack((t5!=null?t5.getText():null)); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unpack"



	// $ANTLR start "print"
	// Grammar.g:41:1: print : ( 'print' '(' STRING ')' | 'print' '(' INT ')' | 'print' '(' ID ')' );
	public final void print() throws RecognitionException {
		Token STRING13=null;
		Token INT14=null;
		Token ID15=null;

		try {
			// Grammar.g:41:7: ( 'print' '(' STRING ')' | 'print' '(' INT ')' | 'print' '(' ID ')' )
			int alt12=3;
			int LA12_0 = input.LA(1);
			if ( (LA12_0==17) ) {
				int LA12_1 = input.LA(2);
				if ( (LA12_1==9) ) {
					switch ( input.LA(3) ) {
					case STRING:
						{
						alt12=1;
						}
						break;
					case INT:
						{
						alt12=2;
						}
						break;
					case ID:
						{
						alt12=3;
						}
						break;
					default:
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 12, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 12, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 12, 0, input);
				throw nvae;
			}

			switch (alt12) {
				case 1 :
					// Grammar.g:41:9: 'print' '(' STRING ')'
					{
					match(input,17,FOLLOW_17_in_print535); 
					match(input,9,FOLLOW_9_in_print537); 
					STRING13=(Token)match(input,STRING,FOLLOW_STRING_in_print539); 
					match(input,10,FOLLOW_10_in_print541); 
					 System.out.println((STRING13!=null?STRING13.getText():null)); 
					}
					break;
				case 2 :
					// Grammar.g:42:9: 'print' '(' INT ')'
					{
					match(input,17,FOLLOW_17_in_print553); 
					match(input,9,FOLLOW_9_in_print555); 
					INT14=(Token)match(input,INT,FOLLOW_INT_in_print557); 
					match(input,10,FOLLOW_10_in_print559); 
					 System.out.println((INT14!=null?INT14.getText():null)); 
					}
					break;
				case 3 :
					// Grammar.g:43:9: 'print' '(' ID ')'
					{
					match(input,17,FOLLOW_17_in_print575); 
					match(input,9,FOLLOW_9_in_print577); 
					ID15=(Token)match(input,ID,FOLLOW_ID_in_print579); 
					match(input,10,FOLLOW_10_in_print581); 
					 actions.print((ID15!=null?ID15.getText():null)); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "print"

	// Delegated rules



	public static final BitSet FOLLOW_stmt_in_prog17 = new BitSet(new long[]{0x0000000000020222L});
	public static final BitSet FOLLOW_assignment_in_stmt37 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_unpack_in_stmt50 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_print_in_stmt63 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_ID_in_assignment81 = new BitSet(new long[]{0x0000000000004000L});
	public static final BitSet FOLLOW_14_in_assignment83 = new BitSet(new long[]{0x0000000000000220L});
	public static final BitSet FOLLOW_assignment_tail_in_assignment87 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_ID_in_assignment108 = new BitSet(new long[]{0x0000000000008000L});
	public static final BitSet FOLLOW_15_in_assignment110 = new BitSet(new long[]{0x0000000000000040L});
	public static final BitSet FOLLOW_INT_in_assignment112 = new BitSet(new long[]{0x0000000000010000L});
	public static final BitSet FOLLOW_16_in_assignment114 = new BitSet(new long[]{0x0000000000004000L});
	public static final BitSet FOLLOW_14_in_assignment116 = new BitSet(new long[]{0x00000000000000E0L});
	public static final BitSet FOLLOW_value_in_assignment118 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_ID_in_assignment140 = new BitSet(new long[]{0x0000000000004000L});
	public static final BitSet FOLLOW_14_in_assignment142 = new BitSet(new long[]{0x0000000000000080L});
	public static final BitSet FOLLOW_STRING_in_assignment144 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_ID_in_assignment166 = new BitSet(new long[]{0x0000000000004000L});
	public static final BitSet FOLLOW_14_in_assignment168 = new BitSet(new long[]{0x0000000000000040L});
	public static final BitSet FOLLOW_INT_in_assignment170 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_9_in_assignment_tail219 = new BitSet(new long[]{0x00000000000004E0L});
	public static final BitSet FOLLOW_value_tuple_in_assignment_tail221 = new BitSet(new long[]{0x0000000000000400L});
	public static final BitSet FOLLOW_10_in_assignment_tail225 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_ID_in_assignment_tail250 = new BitSet(new long[]{0x0000000000000802L});
	public static final BitSet FOLLOW_11_in_assignment_tail256 = new BitSet(new long[]{0x0000000000000020L});
	public static final BitSet FOLLOW_ID_in_assignment_tail262 = new BitSet(new long[]{0x0000000000000802L});
	public static final BitSet FOLLOW_ID_in_assignment_tail287 = new BitSet(new long[]{0x0000000000008000L});
	public static final BitSet FOLLOW_15_in_assignment_tail289 = new BitSet(new long[]{0x0000000000002040L});
	public static final BitSet FOLLOW_INT_in_assignment_tail296 = new BitSet(new long[]{0x0000000000002000L});
	public static final BitSet FOLLOW_13_in_assignment_tail300 = new BitSet(new long[]{0x0000000000010040L});
	public static final BitSet FOLLOW_INT_in_assignment_tail307 = new BitSet(new long[]{0x0000000000010000L});
	public static final BitSet FOLLOW_16_in_assignment_tail311 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_value_in_value_tuple357 = new BitSet(new long[]{0x0000000000001002L});
	public static final BitSet FOLLOW_12_in_value_tuple362 = new BitSet(new long[]{0x00000000000000E0L});
	public static final BitSet FOLLOW_value_in_value_tuple368 = new BitSet(new long[]{0x0000000000001002L});
	public static final BitSet FOLLOW_STRING_in_value425 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_INT_in_value441 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_ID_in_value460 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_9_in_unpack485 = new BitSet(new long[]{0x0000000000000020L});
	public static final BitSet FOLLOW_ID_in_unpack491 = new BitSet(new long[]{0x0000000000001400L});
	public static final BitSet FOLLOW_12_in_unpack496 = new BitSet(new long[]{0x0000000000000020L});
	public static final BitSet FOLLOW_ID_in_unpack502 = new BitSet(new long[]{0x0000000000001400L});
	public static final BitSet FOLLOW_10_in_unpack509 = new BitSet(new long[]{0x0000000000004000L});
	public static final BitSet FOLLOW_14_in_unpack511 = new BitSet(new long[]{0x0000000000000020L});
	public static final BitSet FOLLOW_ID_in_unpack517 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_17_in_print535 = new BitSet(new long[]{0x0000000000000200L});
	public static final BitSet FOLLOW_9_in_print537 = new BitSet(new long[]{0x0000000000000080L});
	public static final BitSet FOLLOW_STRING_in_print539 = new BitSet(new long[]{0x0000000000000400L});
	public static final BitSet FOLLOW_10_in_print541 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_17_in_print553 = new BitSet(new long[]{0x0000000000000200L});
	public static final BitSet FOLLOW_9_in_print555 = new BitSet(new long[]{0x0000000000000040L});
	public static final BitSet FOLLOW_INT_in_print557 = new BitSet(new long[]{0x0000000000000400L});
	public static final BitSet FOLLOW_10_in_print559 = new BitSet(new long[]{0x0000000000000002L});
	public static final BitSet FOLLOW_17_in_print575 = new BitSet(new long[]{0x0000000000000200L});
	public static final BitSet FOLLOW_9_in_print577 = new BitSet(new long[]{0x0000000000000020L});
	public static final BitSet FOLLOW_ID_in_print579 = new BitSet(new long[]{0x0000000000000400L});
	public static final BitSet FOLLOW_10_in_print581 = new BitSet(new long[]{0x0000000000000002L});
}
